Provide a custom console to try the new parser