@@ -116,3 +116,14 @@ test {
 task wrapper(type: Wrapper) {
     gradleVersion = '2.14.1'
 }
+
+task groovyConsole(type: JavaExec, dependsOn:[classes]) {
+    if (JavaVersion.current().isJava8Compatible()) {
+        jvmArgs '-ea', "-Xms256m", "-Xmx512m"
+    } else {
+        jvmArgs '-ea', "-Xms256m", "-Xmx512m", "-XX:PermSize=64m", "-XX:MaxPermSize=192m"
+    }
+
+    main = 'org.codehaus.groovy.parser.antlr4.ui.GroovyConsole'
+    classpath = sourceSets.main.runtimeClasspath
+}
